02_eks/03-gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: ecs-app
  namespace: default
spec:
  selector:
    istio: ingressgateway
  servers:
  - hosts:
    - '*.skrzypek.dev'
    port:
      name: https
      number: 443
      protocol: HTTPS
    tls:
      credentialName: istio-wildcard
      mode: SIMPLE
